# CLIuno-FastAPI-template

./: README.md  SECURITY.md  alembic.ini  env.example  pyproject.toml
app/src/: main.py
app/src/core/: config.py
app/src/database/: session.py
app/src/database/migrations/: env.py
app/src/models/: base.py
