[project]
name = "cliuno-fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.6",
    "passlib>=1.7.4",
    "pydantic-settings>=2.7.1",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "faker>=33.1.0",
    "httpx>=0.28.1",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.1",
    "pytest-cov>=6.0.0",
    "pytest-freezer>=0.4.9",
    "pytest-profiling>=1.8.1",
    "pytest-randomly>=3.16.0",
    "pytest-timeout>=2.3.1",
    "ruff>=0.8.4",
]

[tool.ruff]
line-length = 120
exclude = [
    ".git",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    "src/db/migrations/*",
]
select = ["E", "W", "F", "I", "C", "B"]
ignore = ["B904", "B006", "B008", "C901"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["alembic", "__pycache__", "^config\\.py$", "^env\\.py$"]

[tool.pytest.ini_options]
addopts = "--strict-markers -W error"
junit_family = "xunit2"
testpaths = ["src/tests"]
xfail_strict = true
filterwarnings = ["error", "error::DeprecationWarning"]
